<resources>
    <string name="app_name">EventApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_label">Descrição</string>
    <string name="check_in_label">CHECK-IN</string>
    <string name="ic_description_back">back_icon</string>
    <string name="iv_description_event_image">event_image</string>
    <string name="name">Nome</string>
    <string name="email">E-mail</string>
    <string name="check_in">Check-In</string>
    <string name="save_values_text">Guardar informações</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">cancelar</string>
    <string name="check_in_failure">Ops! Não foi possível realizar o check-in</string>
    <string name="check_in_success">Check-in realizado com sucesso</string>
    <string name="events_empty_list">Nenhum evento foi encontrado</string>
    <string name="calendar">calendario</string>
</resources>